css/main.css
/* ... */
/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
  resize: vertical;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
   /* General Styles */
    
   html {
    font-size: 1em;
   }
    
   body {
    font-family: 'Open Sans', sans-serif;
    font-size: 1em;
    color: #e2e3ed;
    text-align: left;
   }
    
   ul, 
   ol {
    list-style-type: none;
    margin: 0;
    padding: 0;
   }
    
   a {
    color: #e2e3ed;
    text-decoration: none;
   }
    
   h2 {
    font-family: 'Poppins', sans-serif;
    font-weight: 500;
    font-size: 1.875em;
    margin: 0;
   }
    
   h3, 
   h4 {
    font-family: 'Poppins', sans-serif;
    font-size: 1.125em;
    margin: 20px 0;
    font-weight: 500;
   }
    
   p {
    font-size: .875em;
    line-height: 1.285; 
   }
    
   img {
    width: 100%;
   }
    
   figure{
    margin: 0;
   }

   address {
    font-style: normal; 
   }
    
   .content-wrapper {
    width: 90%;
    margin: 50px 0;
   }

/* -------------------- Base Header - Footer Styles -------------------- */

header,
footer {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  background: #202322;
}

header {
  padding: 15px 0;
}

header .content-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  margin: 0;
}

header figure {
  width: 60%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
}

.header-divider {
  width: 100%;
  height: 1px;
  margin: 10px 0 20px 0;
  background: #3a3a3a;
}

header nav {
  display: flex;
  justify-content: space-around;
  align-items: center;
  flex-flow: row wrap;
  width: 60%;
  font-size: 1.125em;
  font-weight: 700;
  text-transform: uppercase;
}

header nav ul {
  display: flex;
  justify-content: space-around;
  width: 100%;
}
header nav ul li {
  font-size: 1.125em;
}
footer {
  flex-direction: column;
  text-align: center;
}

footer p {
  margin: 0;
  color: #e2e3ed;
}

footer .content-wrapper {
  width: 55%;
  margin: 50px 0;
}

footer .contact {
  margin-bottom: 50px;
  color: #e2e3ed;
}

footer .social-icons {
  display: flex;
  justify-content: space-around;
  align-items: center;
  color:#e2e3ed;
}

footer .social-icons p {
  background-color: #527158;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  display: flex;
  justify-content: center;
  align-items: center;
}
footer .social-icons p i {
  font-size: 1.3125em;
}
footer .copyright {
  margin: 20px 0;
}

/* -------------------- Mobile Styles - Homepage -------------------- */

/* Hero Area */

.hero-area {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  background: url('../css/../img/jake-melara-30679-unsplash.png') no-repeat center;
  background-size: cover;
  min-height: 500px;
}
.hero-area h1 {
  font-size: 2.25em;
  font-family: 'Poppins', Helvetica, Arial, sans-serif;
  font-weight: 500; 
  line-height: 1.2; 
  color:#e2e3ed;
}

/* Aside */

aside {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  background: #527158;
}
aside .form{
  margin-top: 30px;
}

input[type=text] {
  box-sizing: border-box;
  width: 100%;
  color: #2a423a;
  font-style: italic;
  padding: 1em;
}

input[type=button] {
  width: 100%;
  padding: 20px 0;
  margin-top: 20px;
  background-color: #2a423a;
  font-family: 'Poppins', Helvetica, Arial, sans-serif;
  font-weight: 500;
  font-size: 1.125em;
  color: #e2e3ed;
  border: none;
  text-align: center;
  text-transform: uppercase;
}

/* Features */

.features {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  background: url('../css/../img/rawpixel-800820-unsplash1.png') no-repeat center;
  background-size: cover;
}

.features h2 {
  margin-bottom: 60px;
  color:#e2e3ed;
}

.features article {
  width: 63%;
  margin: 30px 0;
}

.features .features-items {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  color:#e2e3ed;
}

.features p {
  margin: 0;
  text-align: center;
  color:#e2e3ed;
}

.features i {
	font-size: 3.75em;
  margin-bottom: 40px;
}
/* Reviews */

.reviews {
  display: flex;
  justify-content: center;
  flex-flow: row wrap;
  background: #2a423a;
}

.reviews h2 {
  margin-bottom: 40px;
  line-height: 1;
  color:#e2e3ed;
}

.reviews h3 {
  width: 55%;
  margin: 20px 0;
  color: #e2e3ed;
}
.reviews img {
   margin: 0;
}
/* ==========================================================================
   About Page
   ========================================================================== */

.mission {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  background-color: #527158;
}

.contact-section {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-flow: row wrap;
  background-color: #2a423a;
}

.contact-content p {
  margin: 0;
}
/* ... */

